adjusting signup notice height to prevent page from jumping on form submit

--- a/client/components/NewsletterSignupForm/NewsletterSignupForm.styl
+++ b/client/components/NewsletterSignupForm/NewsletterSignupForm.styl
@@ -31,3 +31,6 @@
   outline none
   border-radius 30px
   padding 15px 25px
+
+.newsletter-signup-notice
+  padding 15px 0
